[package]
name = "card-game"
version = "0.1.0"
authors = ["Skeletonxf <skeletonxf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Assets
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
typetag = "0.1"
once_cell = "1.7"
